[project]
name = "chutes-cache-cleaner"
version = "0.1.0"
description = ""
authors = [
    {name = "Kyle Widmann",email = "kyle.widmann@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface_hub>=0.20.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
