[project]
name = "chutes-cache-cleaner"
version = "0.2.1"
description = ""
authors = [
    {name = "Kyle Widmann",email = "kyle.widmann@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface_hub>=0.36.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
