[project]
name = "tee-bootstrap"
version = "0.1.0"
description = ""
authors = [
    {name = "Kyle Widmann",email = "kyle.widmann@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "tee_bootstrap", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
